# adventofcode-2024

./: .gitignore  old-setup-part2.sh  old-setup.sh  pyproject.toml  ruff.toml  setup.sh  template.py
day1/: p1.py  p2.py
day10/: p1.py  p2.py
day11/: p1.py  p2.py
day12/: p1.py  p2.py
day13/: p1.py  p2.py
day14/: p1.py  p2.py
day15/: p1.py  p2.py
day16/: p1.py  p2.py
day17/: p1.py  p2-input analysis.txt  p2.py
day18/: p1.py  p2.py
day19/: p1.py  p2.py
day2/: p2.py
day20/: p1.py  p2-input.txt  p2.py
day21/: p1.py  p1.py.bak  p2.py
day22/: p1.py  p2.py
day23/: p1.py  p2.py
day24/: p1.py  p2-input.txt  p2.py
day25/: p1.py
day3/: p1.py  p2.py
day4/: grid_builder.py  p1.py  p2.py
day5/: observations.md  p1.py  p2.py
day6/: p1.py  p2.py
day7/: p1.py  p2.py
day8/: p1.py  p2.py
day9/: p1.py  p2.py
util/: README.md  __init__.py  dijkstra.py  grid.py  string_tool.py
